# pokemon-tcg-sdk-rust

./: Cargo.toml  README.md
src/: card.rs  client.rs  errors.rs  lib.rs  set.rs  types.rs
src/card/: ability.rs  ancient_trait.rs  attack.rs  cardmarket.rs  image.rs  legality.rs  resistance.rs  tcgplayer.rs  weakness.rs
src/set/: images.rs  legality.rs
