[package]
name = "pokemon-tcg-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Alexander Mattoni"]
license = "MIT"
license-file = "LICENSE"
description = "Pokémon TCG SDK is a rust wrapper around the Pokémon TCG API located at pokemontcg.io"
repository = "https://github.com/mattoni/pokemon-tcg-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wiremock = "0.5.2"
